add Featured Project and Client

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,7 @@
     </div>
 
     <main>
+      <!-- experience -->
         <section class="bg-primary h-[800px]">
             <div class="mx-[80px]">
                 <div class="flex mx-[80px] pt-[40px]">
@@ -103,8 +104,10 @@
                 </div>
             </div>
         </section>
-        <section class="bg-secondary h-[800px]">
-            <div class="flex gap-[150px] items-center justify-center text-center text-white py-[38px] mx-[80px] border-b-3">
+        <!-- Featured Project -->
+        <section class="bg-secondary h-[840px]">
+          <div class="mx-[80px]">
+            <div class="flex gap-[150px] items-center justify-center text-center text-white py-[38px] border-b-3">
                 <div class="relative w-[170px] flex flex-col items-center justify-center">
                   <h1 class="text-[16px] font-medium">Evaluation And Signing Of The Contract</h1>
                   <p class="text-[12px] font-medium pt-[12px]">Step 1</p>
@@ -137,7 +140,52 @@
                   </div>
                 </div>
             </div>
+            <div class="flex items-center justify-between mt-[66px]">
+              <h1 class="text-[50px] font-semibold">Featured Project</h1>
+              <div>
+                <ul class="flex items-center gap-[14px] text-[16px] font-semibold text-white">
+                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">All Works</a></li>
+                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Construction</a></li>
+                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Architecture</a></li>
+                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Building</a></li>
+                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Renovations</a></li>
+                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Interior</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="flex items-center justify-around mt-[49px] overflow-hidden">
+              <img class="w-[350px] h-[413px]" src="./assets/img/sky.png" alt="img sky">
+              <img class="w-[350px] h-[413px]" src="./assets/img/house.png" alt="img house">
+              <img class="w-[350px] h-[413px]" src="./assets/img/apartemen.png" alt="img apartemen">
+          </div>
+          <p class="flex items-center gap-[10px] font-semibold text-[16px] justify-end mt-[22px]">Explore All Projects <span><svg class="w-[24px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C17.52 2 22 6.48 22 12C22 17.52 17.52 22 12 22C6.48 22 2 17.52 2 12C2 6.48 6.48 2 12 2ZM12 11H8V13H12V16L16 12L12 8V11Z"></path></svg></span></p>
         </section>
+        <!-- Client -->
+         <section class="bg-primary h-[800px]">
+          <div class="mx-[80px]">
+            <div class="text-white text-center">
+              <h1 class="text-[24px] font-semibold text-secondary pt-[52px] mb-[28px]">What Our Client Says</h1>
+              <p class="text-[16px] font-normal w-[760px] mx-auto mb-[14px]">I am very satisfied with the services. Their team is very professional and efficient in completing our project on time and at a very affordable cost. The quality of their work is very good and I highly recommend this company for any construction project.</p>
+              <p class="text-[16px] font-medium mb-1">Tom DeLonge</p>
+              <p class="text-[14px] font-medium">CEO, Lexmark</p>
+            </div>
+            <div class="flex items-center justify-center gap-[16px] mt-[28px]">
+              <h1 class="text-white flex items-center gap-[6px]"><span><svg class="w-[20px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M10.8284 12.0007L15.7782 16.9504L14.364 18.3646L8 12.0007L14.364 5.63672L15.7782 7.05093L10.8284 12.0007Z"></path></svg></span>Prev</h1>
+              <img class="w-[50px] h-[50px] rounded-full" src="./assets/img/clien1.png" alt="clien 1">
+              <div>
+                <img class="w-[70px] h-[70px] rounded-full" src="./assets/img/clien2.png" alt="clien 2">
+              </div>
+              <img class="w-[50px] h-[50px] rounded-full" src="./assets/img/clie3.png" alt="clien 3">
+              <h1 class="text-white flex items-center gap-[6px]">Next <span><svg class="w-[20px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M13.1717 12.0007L8.22192 7.05093L9.63614 5.63672L16.0001 12.0007L9.63614 18.3646L8.22192 16.9504L13.1717 12.0007Z"></path></svg></span></h1>
+            </div>
+          </div>
+          <div class="mt-[42px] relative">
+            <img src="./assets/img/cover_Building.png" alt="">
+            <div class="absolute top-0 bg-linear-180 from-primary w-full h-full opacity-200">
+              <h1>Leading Way In Building & Civil Construction</h1>
+            </div>
+          </div>
+         </section>
     </main>
   </body>
 </html>
