--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
       <!-- experience -->
         <section class="bg-primary h-[800px]">
             <div class="mx-[80px]">
-                <div class="flex mx-[80px] pt-[40px]">
+                <div class="flex gap-[30px] pt-[40px]">
                     <div class="flex items-center gap-[2px]">
                         <p class="text-[48px] font-semibold text-secondary">25+</p>
                         <p class="w-[88px] text-[16px] font-medium pt-[12px] text-white">Years of Experience</p>
@@ -161,7 +161,7 @@
           <p class="flex items-center gap-[10px] font-semibold text-[16px] justify-end mt-[22px]">Explore All Projects <span><svg class="w-[24px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C17.52 2 22 6.48 22 12C22 17.52 17.52 22 12 22C6.48 22 2 17.52 2 12C2 6.48 6.48 2 12 2ZM12 11H8V13H12V16L16 12L12 8V11Z"></path></svg></span></p>
         </section>
         <!-- Client -->
-         <section class="bg-primary h-[800px]">
+         <section class="bg-primary">
           <div class="mx-[80px]">
             <div class="text-white text-center">
               <h1 class="text-[24px] font-semibold text-secondary pt-[52px] mb-[28px]">What Our Client Says</h1>
@@ -180,12 +180,104 @@
             </div>
           </div>
           <div class="mt-[42px] relative">
-            <img src="./assets/img/cover_Building.png" alt="">
-            <div class="absolute top-0 bg-linear-180 from-primary w-full h-full opacity-200">
-              <h1>Leading Way In Building & Civil Construction</h1>
+            <img class="h-[830px] w-full" src="./assets/img/cover_Building.png" alt="">
+            <div class="absolute top-0 bg-linear-180 from-primary w-full h-full opacity-200 px-[80px]">
+              <div class="mx-[80px]">
+                <h1 class="text-[50px] text-white font-semibold text-center mt-[51px]">Leading Way In Building & Civil Construction</h1>
+                <div class="flex items-center justify-center gap-11 text-white text-[20px] font-medium mt-[15px]">
+                  <p class="flex items-center gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">Professional Staff</p>
+                  <p class="flex items-center gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">100% Satisfaction</p>
+                  <p class="flex items-center gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">Accurate Testing</p>
+                  <p class="flex items-center gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">Transparent Pricing</p>
+                </div>
+              </div>
+              <div class="flex justify-between mt-[50px]">
+                <div class="w-[763px] h-fit bg-secondary rounded-[15px] py-[42px] px-[53px]">
+                  <h1 class="text-[20px] text-white font-medium mb-[24px]">Request A Quote</h1>
+                  <p class="text-[16px] text-white font-medium mb-[18px]">Complete control over products allow us to our customers the best quality prices and services. We take great pride in everything that we do in Jhontraktor</p>
+                  <form class="grid grid-cols-2 gap-[18px]" action="">
+                      <input class="bg-white rounded-[15px] py-[15px] px-[20px] w-[320px]" type="text" placeholder="Name">
+                      <input class="bg-white rounded-[15px] py-[15px] px-[20px] w-[320px]" type="email" placeholder="Email">
+                      <input class="bg-white rounded-[15px] py-[15px] px-[20px] w-[320px] appearance-none [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:appearance-none" type="number" placeholder="Phone">
+                      <input class="bg-white rounded-[15px] py-[15px] px-[20px] w-[320px]" type="text" placeholder="Select Your Service">
+                      <textarea class="w-full pt-[15px] px-[20px] pb-[60px] bg-white col-span-2 rounded-[15px] resize-none" name="" id="" placeholder="Additional Details!"></textarea>
+                      <input class="text-white bg-primary w-full col-span-2 py-[15px] rounded-[15px]" type="submit" value="Submit Request">
+                  </form>
+                </div>
+                <div class="bg-secondary text-white rounded-[15px] w-[399px] py-[42px] px-[64px]">
+                  <h1 class="text-[20px] mb-[20px] font-medium">Contact Info</h1>
+                  <div class="flex flex-col gap-[16px]">
+                    <div>
+                      <h2 class="text-[18px]">Our Location</h2>
+                      <p class="text-[16px]">18 Office Park Building 21th Floor Unit C. Jl. TB Simatupang Kav. 18, Jakarta Selatan ,12520</p>
+                    </div>
+                    <div>
+                      <h2 class="text-[18px]">Quick Contact</h2>
+                      <p class="text-[16px] w-[230px]">Email : (+62) 877-2469-7246 Call Us : contact@jhontraktor.co</p>
+                    </div>
+                    <div>
+                      <h2 class="text-[18px]">Opening Hours</h2>
+                      <p class="text-[16px]">Monday - Friday 09:00 AM - 06:00 PM</p>
+                    </div>
+                    <div>
+                      <p class="text-[18px]">Do You Have Any Question, Just Contact Us To Get Help!</p>
+                    </div>
+                  </div>
+                  <button class="text-[18px] bg-primary rounded-[15px] py-[15px] w-full mt-[20px]">Contact Us</button>
+                </div>
+              </div>
             </div>
           </div>
          </section>
+         <!-- sosial media -->
+         <section class="bg-primary h-[377px]">
+          <div class="mx-[80px] text-white py-[43px]">
+            <div class="flex justify-between">
+              <h1 class="font-unlock text-[33px]">JHONTRAKTOR</h1>
+              <div class="flex items-center">
+                <p class="flex items-center text-[18px]">Subscribe To Our Newslatter :</p>
+                <div class="flex items-center border-b-2">
+                  <input class="pl-[19px] focus:outline-none text-[16px]" type="email" placeholder="Enter your email addres">
+                  <svg class="w-[24px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M1.99974 13.0001L1.9996 11.0002L18.1715 11.0002L14.2218 7.05044L15.636 5.63623L22 12.0002L15.636 18.3642L14.2218 16.9499L18.1716 13.0002L1.99974 13.0001Z"></path></svg>
+                </div>
+              </div>
+            </div>
+            <div class="flex mt-[32px] gap-[45px]">
+              <div>
+                <h1 class="text-[18px] font-medium mb-[14px]">About Us</h1>
+                <p class="w-[460px] text-[16px] text-justify">We have the confidence to provide the best service for you, with the support of Professional and Certified HR that we currently have and the high-quality materials we use and structured work techniques, we will be able to realize timely completion of work.</p>
+              </div>
+              <div>
+                <h1 class="text-[18px] font-medium mb-[14px]">Office</h1>
+                <p class="text-[16px]">18 Office Park Building 21th Floor Unit C.</p>
+                <p class="text-[16px] w-[200px]">Jl. TB Simatupang Kav. 18, Jakarta Selatan ,12520</p>
+              </div>
+              <div>
+                <h1 class="text-[18px] font-medium mb-[14px]">Contact</h1>
+                <p class="text-[16px]">Email : contact@jhontracktor.com</p>
+                <p class="text-[16px]">Phone : (+62) 877-2469-7246</p>
+              </div>
+              <div>
+                <h1 class="text-[18px] font-medium mb-[14px]">Link</h1>
+                <ul class="text-[16px]">
+                  <li><a href=""></a>Home</li>
+                  <li><a href=""></a>About Us</li>
+                  <li><a href=""></a>Service</li>
+                  <li><a href=""></a>Project</li>
+                </ul>
+              </div>
+            </div>
+            <div class="flex items-center gap-[17px] mt-[24px]">
+              <svg class="w-[30px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M18.3362 18.339H15.6707V14.1622C15.6707 13.1662 15.6505 11.8845 14.2817 11.8845C12.892 11.8845 12.6797 12.9683 12.6797 14.0887V18.339H10.0142V9.75H12.5747V10.9207H12.6092C12.967 10.2457 13.837 9.53325 15.1367 9.53325C17.8375 9.53325 18.337 11.3108 18.337 13.6245V18.339H18.3362ZM7.00373 8.57475C6.14573 8.57475 5.45648 7.88025 5.45648 7.026C5.45648 6.1725 6.14648 5.47875 7.00373 5.47875C7.85873 5.47875 8.55173 6.1725 8.55173 7.026C8.55173 7.88025 7.85798 8.57475 7.00373 8.57475ZM8.34023 18.339H5.66723V9.75H8.34023V18.339ZM19.6697 3H4.32923C3.59498 3 3.00098 3.5805 3.00098 4.29675V19.7033C3.00098 20.4202 3.59498 21 4.32923 21H19.6675C20.401 21 21.001 20.4202 21.001 19.7033V4.29675C21.001 3.5805 20.401 3 19.6675 3H19.6697Z"></path></svg>
+              <svg class="w-[30px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M15.4024 21V14.0344H17.7347L18.0838 11.3265H15.4024V9.59765C15.4024 8.81364 15.62 8.27934 16.7443 8.27934L18.1783 8.27867V5.85676C17.9302 5.82382 17.0791 5.75006 16.0888 5.75006C14.0213 5.75006 12.606 7.01198 12.606 9.32952V11.3265H10.2677V14.0344H12.606V21H4C3.44772 21 3 20.5523 3 20V4C3 3.44772 3.44772 3 4 3H20C20.5523 3 21 3.44772 21 4V20C21 20.5523 20.5523 21 20 21H15.4024Z"></path></svg>
+              <svg class="w-[30px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M22.2125 5.65605C21.4491 5.99375 20.6395 6.21555 19.8106 6.31411C20.6839 5.79132 21.3374 4.9689 21.6493 4.00005C20.8287 4.48761 19.9305 4.83077 18.9938 5.01461C18.2031 4.17106 17.098 3.69303 15.9418 3.69434C13.6326 3.69434 11.7597 5.56661 11.7597 7.87683C11.7597 8.20458 11.7973 8.52242 11.8676 8.82909C8.39047 8.65404 5.31007 6.99005 3.24678 4.45941C2.87529 5.09767 2.68005 5.82318 2.68104 6.56167C2.68104 8.01259 3.4196 9.29324 4.54149 10.043C3.87737 10.022 3.22788 9.84264 2.64718 9.51973C2.64654 9.5373 2.64654 9.55487 2.64654 9.57148C2.64654 11.5984 4.08819 13.2892 6.00199 13.6731C5.6428 13.7703 5.27232 13.8194 4.90022 13.8191C4.62997 13.8191 4.36771 13.7942 4.11279 13.7453C4.64531 15.4065 6.18886 16.6159 8.0196 16.6491C6.53813 17.8118 4.70869 18.4426 2.82543 18.4399C2.49212 18.4402 2.15909 18.4205 1.82812 18.3811C3.74004 19.6102 5.96552 20.2625 8.23842 20.2601C15.9316 20.2601 20.138 13.8875 20.138 8.36111C20.138 8.1803 20.1336 7.99886 20.1256 7.81997C20.9443 7.22845 21.651 6.49567 22.2125 5.65605Z"></path></svg>
+              <svg class="w-[30px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M13.0281 2.00073C14.1535 2.00259 14.7238 2.00855 15.2166 2.02322L15.4107 2.02956C15.6349 2.03753 15.8561 2.04753 16.1228 2.06003C17.1869 2.1092 17.9128 2.27753 18.5503 2.52503C19.2094 2.7792 19.7661 3.12253 20.3219 3.67837C20.8769 4.2342 21.2203 4.79253 21.4753 5.45003C21.7219 6.0867 21.8903 6.81337 21.9403 7.87753C21.9522 8.1442 21.9618 8.3654 21.9697 8.58964L21.976 8.78373C21.9906 9.27647 21.9973 9.84686 21.9994 10.9723L22.0002 11.7179C22.0003 11.809 22.0003 11.903 22.0003 12L22.0002 12.2821L21.9996 13.0278C21.9977 14.1532 21.9918 14.7236 21.9771 15.2163L21.9707 15.4104C21.9628 15.6347 21.9528 15.8559 21.9403 16.1225C21.8911 17.1867 21.7219 17.9125 21.4753 18.55C21.2211 19.2092 20.8769 19.7659 20.3219 20.3217C19.7661 20.8767 19.2069 21.22 18.5503 21.475C17.9128 21.7217 17.1869 21.89 16.1228 21.94C15.8561 21.9519 15.6349 21.9616 15.4107 21.9694L15.2166 21.9757C14.7238 21.9904 14.1535 21.997 13.0281 21.9992L12.2824 22C12.1913 22 12.0973 22 12.0003 22L11.7182 22L10.9725 21.9993C9.8471 21.9975 9.27672 21.9915 8.78397 21.9768L8.58989 21.9705C8.36564 21.9625 8.14444 21.9525 7.87778 21.94C6.81361 21.8909 6.08861 21.7217 5.45028 21.475C4.79194 21.2209 4.23444 20.8767 3.67861 20.3217C3.12278 19.7659 2.78028 19.2067 2.52528 18.55C2.27778 17.9125 2.11028 17.1867 2.06028 16.1225C2.0484 15.8559 2.03871 15.6347 2.03086 15.4104L2.02457 15.2163C2.00994 14.7236 2.00327 14.1532 2.00111 13.0278L2.00098 10.9723C2.00284 9.84686 2.00879 9.27647 2.02346 8.78373L2.02981 8.58964C2.03778 8.3654 2.04778 8.1442 2.06028 7.87753C2.10944 6.81253 2.27778 6.08753 2.52528 5.45003C2.77944 4.7917 3.12278 4.2342 3.67861 3.67837C4.23444 3.12253 4.79278 2.78003 5.45028 2.52503C6.08778 2.27753 6.81278 2.11003 7.87778 2.06003C8.14444 2.04816 8.36564 2.03847 8.58989 2.03062L8.78397 2.02433C9.27672 2.00969 9.8471 2.00302 10.9725 2.00086L13.0281 2.00073ZM12.0003 7.00003C9.23738 7.00003 7.00028 9.23956 7.00028 12C7.00028 14.7629 9.23981 17 12.0003 17C14.7632 17 17.0003 14.7605 17.0003 12C17.0003 9.23713 14.7607 7.00003 12.0003 7.00003ZM12.0003 9.00003C13.6572 9.00003 15.0003 10.3427 15.0003 12C15.0003 13.6569 13.6576 15 12.0003 15C10.3434 15 9.00028 13.6574 9.00028 12C9.00028 10.3431 10.3429 9.00003 12.0003 9.00003ZM17.2503 5.50003C16.561 5.50003 16.0003 6.05994 16.0003 6.74918C16.0003 7.43843 16.5602 7.9992 17.2503 7.9992C17.9395 7.9992 18.5003 7.4393 18.5003 6.74918C18.5003 6.05994 17.9386 5.49917 17.2503 5.50003Z"></path></svg>
+            </div>
+          </div>
+         </section>     
     </main>
+    <footer>
+      <h1 class="bg-primary text-white text-[12px] text-center py-2">Copyright © 2023 CandyAP. All Rights Reserved</h1>
+    </footer>
   </body>
 </html>
