add responsive tablet

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Construction</title>
     <link rel="stylesheet" href="./css/output.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,11 +12,11 @@
       rel="stylesheet"
     />
   </head>
-  <body class="font-poppins lg:w-[1349px] mx-auto">
+  <body class="font-poppins md:w-[1000px] lg:w-[1349px] mx-auto">
     <nav class="bg-primary sticky top-0 z-10">
-      <div class="flex items-center justify-between gap-[160px] py-[25px] mx-[80px]">
+      <div class="flex items-center justify-between py-[25px] md:mx-[40px] lg:mx-[80px]">
         <h1 class="font-unlock font-semibold text-[25px] text-secondary">JHONTRAKTOR</h1>
-        <div class="flex items-center gap-[100px]">
+        <div class="flex items-center md:gap-[50px] lg:gap-[100px]">
           <ul class="flex items-center gap-[24px] font-medium text-[16px] text-white">
             <li><a class="hover:text-secondary hover:border-b-2 hover:pb-[10px]" href="">Home</a></li>
             <li><a class="hover:text-secondary hover:border-b-2 hover:pb-[10px]" href="">About Us</a></li>
@@ -43,48 +43,49 @@
         </div>
       </div>
     </nav>
-    <div class="relative">
-        <img class="" src="./assets/img/img_construction.jpg" alt="img contruction">
-        <div class="absolute top-[130px] left-[80px]">
-            <h1 class="font-semibold w-[400px] text-[60px] text-white mb-[14px]">We Prepare For The <span class="text-secondary">Future</span></h1>
-            <p class="text-[20px] w-[530px] text-white mb-[65px]">We provide the best architectural design, contruction, and building maintance services for you.</p>
-            <div class="flex items-center gap-[24px]">
-                <button class="flex items-center justify-center gap-[8px] text-[16px] py-[10px] px-[30px] bg-secondary text-white rounded-[15px]">Our Services<svg class="w-[20px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 11V8L16 12L12 16V13H8V11H12ZM12 2C17.52 2 22 6.48 22 12C22 17.52 17.52 22 12 22C6.48 22 2 17.52 2 12C2 6.48 6.48 2 12 2ZM12 20C16.42 20 20 16.42 20 12C20 7.58 16.42 4 12 4C7.58 4 4 7.58 4 12C4 16.42 7.58 20 12 20Z"></path></svg></button>
-                <button class="py-[10px] px-[30px] text-[16px] text-black rounded-[15px] bg-white">View Project</button>
+    
+    <main >
+      <!-- Home -->
+        <section class="relative">
+            <img class="" src="./assets/img/img_construction.jpg" alt="img contruction">
+            <div class="absolute md:top-[50px] md:left-[40px] lg:top-[130px] lg:left-[80px]">
+                <h1 class="font-semibold w-[400px] text-white mb-[14px] md:text-[50px] lg:text-[60px]">We Prepare For The <span class="text-secondary">Future</span></h1>
+                <p class="text-white mb-[65px] md:w-[460px] md:text-[18px] lg:w-[530px] lg:text-[20px]">We provide the best architectural design, contruction, and building maintance services for you.</p>
+                <div class="flex items-center gap-[24px]">
+                    <button class="flex items-center justify-center gap-[8px] py-[10px] px-[30px] bg-secondary text-white rounded-[15px] md:text-[14px] lg:text-[16px]">Our Services<svg class="w-[20px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 11V8L16 12L12 16V13H8V11H12ZM12 2C17.52 2 22 6.48 22 12C22 17.52 17.52 22 12 22C6.48 22 2 17.52 2 12C2 6.48 6.48 2 12 2ZM12 20C16.42 20 20 16.42 20 12C20 7.58 16.42 4 12 4C7.58 4 4 7.58 4 12C4 16.42 7.58 20 12 20Z"></path></svg></button>
+                    <button class="py-[10px] px-[30px] text-black rounded-[15px] bg-white md:text-[14px] lg:text-[16px]">View Project</button>
+                </div>
             </div>
-        </div>
-        <div class="bg-secondary py-[53px] px-[50px] w-fit rounded-[15px] absolute top-[520px] right-[80px] flex flex-col gap-[15px]">
-            <div class="flex items-center gap-[10px]">
-                <img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">
-                <p class="text-[16px] font-medium text-white">Quality Control System, 100% Satisfaction Guarantee</p class="text-[16px] font-medium text-white">
+            <div class="bg-secondary w-fit rounded-[15px] absolute flex flex-col md:gap-[10px] md:py-[33px] md:px-[30px] md:top-[380px] md:right-[40px] lg:gap-[15px] lg:py-[53px] lg:px-[50px] lg:top-[520px] lg:right-[80px]">
+                <div class="flex items-center gap-[10px]">
+                    <img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">
+                    <p class="font-medium text-white md:text-[14px] lg:text-[16px]">Quality Control System, 100% Satisfaction Guarantee</p class="text-[16px] font-medium text-white">
+                </div>
+                <div class="flex items-center gap-[10px]">
+                    <img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">
+                    <p class="font-medium text-white md:text-[14px] lg:text-[16px]">Highly Proffesional Staff, Accurate Testing Processes</p>
+                </div>
+                <div class="flex items-center gap-[10px]">
+                    <img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">
+                    <p class="font-medium text-white md:text-[14px] lg:text-[16px]">Unrivalled Workmanship, Proffesional and Qualified</p>
+                </div>
             </div>
-            <div class="flex items-center gap-[10px]">
-                <img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">
-                <p class="text-[16px] font-medium text-white">Highly Proffesional Staff, Accurate Testing Processes</p>
-            </div>
-            <div class="flex items-center gap-[10px]">
-                <img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">
-                <p class="text-[16px] font-medium text-white">Unrivalled Workmanship, Proffesional and Qualified</p>
-            </div>
-        </div>
-    </div>
-
-    <main>
-      <!-- experience -->
-        <section class="bg-primary h-[800px]">
-            <div class="mx-[80px]">
-                <div class="flex gap-[30px] pt-[40px]">
+        </section>
+      <!-- Experience -->
+        <section class="bg-primary md:h-[770px] lg:h-[800px]">
+            <div class="md:mx-[40px] lg:mx-[80px]">
+                <div class="flex md:pt-[20px] lg:pt-[40px] lg:gap-[30px]">
                     <div class="flex items-center gap-[2px]">
-                        <p class="text-[48px] font-semibold text-secondary">25+</p>
-                        <p class="w-[88px] text-[16px] font-medium pt-[12px] text-white">Years of Experience</p>
+                        <p class="font-semibold text-secondary md:text-[28px] lg:text-[48px]">25+</p>
+                        <p class="w-[88px] font-medium pt-[12px] text-white md:text-[14px] lg:text-[16px]">Years of Experience</p>
                     </div>
                     <div class="flex items-center gap-[2px]">
-                        <p class="text-[48px] font-semibold text-secondary">378+</p>
-                        <p class="w-[80px] text-[16px] font-medium pt-[12px] text-white">Project Complete</p>
+                        <p class="font-semibold text-secondary md:text-[28px] lg:text-[48px]">378+</p>
+                        <p class="w-[80px] font-medium pt-[12px] text-white md:text-[14px] lg:text-[16px]">Project Complete</p>
                     </div>
                     <div class="flex items-center gap-[2px]">
-                        <p class="text-[48px] font-semibold text-secondary">69+</p>
-                        <p class="w-[105px] text-[16px] font-medium pt-[12px] text-white">Winning Global Award</p>
+                        <p class="font-semibold text-secondary md:text-[28px] lg:text-[48px]">69+</p>
+                        <p class="font-medium pt-[12px] text-white md:w-[90px] md:text-[14px] lg:w-[105px] lg:text-[16px]">Winning Global Award</p>
                     </div>
                 </div>
                 <div class="flex  mt-[113px]">
@@ -106,8 +107,8 @@
         </section>
         <!-- Featured Project -->
         <section class="bg-secondary h-[840px]">
-          <div class="mx-[80px]">
-            <div class="flex gap-[150px] items-center justify-center text-center text-white py-[38px] border-b-3">
+          <div class="md:mx-[40px] lg:mx-[80px]">
+            <div class="flex items-center justify-center text-center text-white py-[38px] border-b-3 md:gap-[80px] lg:gap-[150px]">
                 <div class="relative w-[170px] flex flex-col items-center justify-center">
                   <h1 class="text-[16px] font-medium">Evaluation And Signing Of The Contract</h1>
                   <p class="text-[12px] font-medium pt-[12px]">Step 1</p>
@@ -132,7 +133,7 @@
                   </div>
                 </div>
 
-                <div class="relative w-[160px] flex flex-col items-center justify-center">
+                <div class="relative w-[170px] flex flex-col items-center justify-center">
                   <h1 class="text-[16px] font-medium">Delivering The Project To The Customer</h1>
                   <p class="text-[12px] font-medium pt-[12px]">Step 4</p>
                   <div class="absolute top-[100px] w-[35px] h-[35px] bg-white-transparan rounded-full">
@@ -141,9 +142,9 @@
                 </div>
             </div>
             <div class="flex items-center justify-between mt-[66px]">
-              <h1 class="text-[50px] font-semibold">Featured Project</h1>
+              <h1 class="font-semibold md:text-[40px] lg:text-[50px]">Featured Project</h1>
               <div>
-                <ul class="flex items-center gap-[14px] text-[16px] font-semibold text-white">
+                <ul class="flex items-center gap-[14px] font-semibold text-white md:text-[14px] lg:text-[16px]">
                   <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">All Works</a></li>
                   <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Construction</a></li>
                   <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Architecture</a></li>
@@ -154,15 +155,15 @@
               </div>
             </div>
             <div class="flex items-center justify-around mt-[49px] overflow-hidden">
-              <img class="w-[350px] h-[413px]" src="./assets/img/sky.png" alt="img sky">
-              <img class="w-[350px] h-[413px]" src="./assets/img/house.png" alt="img house">
-              <img class="w-[350px] h-[413px]" src="./assets/img/apartemen.png" alt="img apartemen">
+              <img class="md:w-[270px] md:h-[330px] lg:w-[350px] lg:h-[413px]" src="./assets/img/sky.png" alt="img sky">
+              <img class="md:w-[270px] md:h-[330px] lg:w-[350px] lg:h-[413px]" src="./assets/img/house.png" alt="img house">
+              <img class="md:w-[270px] md:h-[330px] lg:w-[350px] lg:h-[413px]" src="./assets/img/apartemen.png" alt="img apartemen">
           </div>
           <p class="flex items-center gap-[10px] font-semibold text-[16px] justify-end mt-[22px]">Explore All Projects <span><svg class="w-[24px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C17.52 2 22 6.48 22 12C22 17.52 17.52 22 12 22C6.48 22 2 17.52 2 12C2 6.48 6.48 2 12 2ZM12 11H8V13H12V16L16 12L12 8V11Z"></path></svg></span></p>
         </section>
         <!-- Client -->
          <section class="bg-primary">
-          <div class="mx-[80px]">
+          <div class="md:mx-[40px] lg:mx-[80px]">
             <div class="text-white text-center">
               <h1 class="text-[24px] font-semibold text-secondary pt-[52px] mb-[28px]">What Our Client Says</h1>
               <p class="text-[16px] font-normal w-[760px] mx-auto mb-[14px]">I am very satisfied with the services. Their team is very professional and efficient in completing our project on time and at a very affordable cost. The quality of their work is very good and I highly recommend this company for any construction project.</p>
@@ -180,33 +181,33 @@
             </div>
           </div>
           <div class="mt-[42px] relative">
-            <img class="h-[830px] w-full" src="./assets/img/cover_Building.png" alt="">
+            <img class="w-full md:h-[890px] lg:h-[830px]" src="./assets/img/cover_Building.png" alt="">
             <div class="absolute top-0 bg-linear-180 from-primary w-full h-full opacity-200 px-[80px]">
-              <div class="mx-[80px]">
-                <h1 class="text-[50px] text-white font-semibold text-center mt-[51px]">Leading Way In Building & Civil Construction</h1>
-                <div class="flex items-center justify-center gap-11 text-white text-[20px] font-medium mt-[15px]">
+              <div class="md:mx-[40px] lg:mx-[80px]">
+                <h1 class="text-white font-semibold text-center mt-[51px] md:text-[40px] lg:text-[50px]">Leading Way In Building & Civil Construction</h1>
+                <div class="flex items-center justify-center text-white font-medium mt-[15px] md:gap-6 md:text-[16px] lg:gap-11 lg:text-[20px]">
                   <p class="flex items-center gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">Professional Staff</p>
                   <p class="flex items-center gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">100% Satisfaction</p>
                   <p class="flex items-center gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">Accurate Testing</p>
                   <p class="flex items-center gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">Transparent Pricing</p>
                 </div>
               </div>
-              <div class="flex justify-between mt-[50px]">
-                <div class="w-[763px] h-fit bg-secondary rounded-[15px] py-[42px] px-[53px]">
+              <div class="flex md:gap-[40px] mt-[50px] lg:gap-0 lg:justify-between">
+                <div class="w-[763px] h-fit bg-secondary rounded-[15px] md:py-[32px] md:px-[43px] lg:py-[42px] lg:px-[53px]">
                   <h1 class="text-[20px] text-white font-medium mb-[24px]">Request A Quote</h1>
                   <p class="text-[16px] text-white font-medium mb-[18px]">Complete control over products allow us to our customers the best quality prices and services. We take great pride in everything that we do in Jhontraktor</p>
                   <form class="grid grid-cols-2 gap-[18px]" action="">
-                      <input class="bg-white rounded-[15px] py-[15px] px-[20px] w-[320px]" type="text" placeholder="Name">
-                      <input class="bg-white rounded-[15px] py-[15px] px-[20px] w-[320px]" type="email" placeholder="Email">
-                      <input class="bg-white rounded-[15px] py-[15px] px-[20px] w-[320px] appearance-none [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:appearance-none" type="number" placeholder="Phone">
-                      <input class="bg-white rounded-[15px] py-[15px] px-[20px] w-[320px]" type="text" placeholder="Select Your Service">
+                      <input class="bg-white rounded-[15px] py-[15px] px-[20px] lg:w-[320px]" type="text" placeholder="Name">
+                      <input class="bg-white rounded-[15px] py-[15px] px-[20px] lg:w-[320px]" type="email" placeholder="Email">
+                      <input class="bg-white rounded-[15px] py-[15px] px-[20px] lg:w-[320px] appearance-none [&::-webkit-inner-spin-button]:appearance-none [&::-webkit-outer-spin-button]:appearance-none" type="number" placeholder="Phone">
+                      <input class="bg-white rounded-[15px] py-[15px] px-[20px] lg:w-[320px]" type="text" placeholder="Select Your Service">
                       <textarea class="w-full pt-[15px] px-[20px] pb-[60px] bg-white col-span-2 rounded-[15px] resize-none" name="" id="" placeholder="Additional Details!"></textarea>
                       <input class="text-white bg-primary w-full col-span-2 py-[15px] rounded-[15px]" type="submit" value="Submit Request">
                   </form>
                 </div>
-                <div class="bg-secondary text-white rounded-[15px] w-[399px] py-[42px] px-[64px]">
-                  <h1 class="text-[20px] mb-[20px] font-medium">Contact Info</h1>
-                  <div class="flex flex-col gap-[16px]">
+                <div class="bg-secondary text-white rounded-[15px] w-[399px] md:py-[42px] md:px-[64px] lg:py-[42px] lg:px-[64px]">
+                  <h1 class="text-[20px] mb-[23px] font-medium">Contact Info</h1>
+                  <div class="flex flex-col md:gap-[21px] lg:gap-[16px]">
                     <div>
                       <h2 class="text-[18px]">Our Location</h2>
                       <p class="text-[16px]">18 Office Park Building 21th Floor Unit C. Jl. TB Simatupang Kav. 18, Jakarta Selatan ,12520</p>
@@ -229,9 +230,9 @@
             </div>
           </div>
          </section>
-         <!-- sosial media -->
-         <section class="bg-primary h-[377px]">
-          <div class="mx-[80px] text-white py-[43px]">
+         <!-- Sosial media -->
+         <section class="bg-primary md:h-[577px] lg:h-[377px]">
+          <div class="md:mx-[40px] lg:mx-[80px] text-white py-[43px]">
             <div class="flex justify-between">
               <h1 class="font-unlock text-[33px]">JHONTRAKTOR</h1>
               <div class="flex items-center">
@@ -242,7 +243,7 @@
                 </div>
               </div>
             </div>
-            <div class="flex mt-[32px] gap-[45px]">
+            <div class="mt-[32px] md:grid md:grid-cols-2 md:gap-[100px] lg:flex lg:gap-[45px]">
               <div>
                 <h1 class="text-[18px] font-medium mb-[14px]">About Us</h1>
                 <p class="w-[460px] text-[16px] text-justify">We have the confidence to provide the best service for you, with the support of Professional and Certified HR that we currently have and the high-quality materials we use and structured work techniques, we will be able to realize timely completion of work.</p>
