--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="font-poppins w-[430px] md:w-[1000px] lg:w-[1349px] mx-auto">
+  <body class="font-poppins lg:max-w-[1355px] mx-auto">
     <nav class="bg-primary sticky top-0 z-10">
       <div class="flex items-center justify-between py-[25px] mx-[15px] md:mx-[40px] lg:mx-[80px]">
         <div class="flex items-center w-full justify-between md:w-0 lg:w-0">
