memperbaiki responsive hp

--- a/src/index.html
+++ b/src/index.html
@@ -52,8 +52,8 @@
         <section class="relative">
             <img src="./assets/img/img_construction.jpg" alt="img contruction">
             <div class="absolute top-5 left-[15px] md:top-[70px] md:left-[40px] lg:top-[130px] lg:left-[80px]">
-                <h1 class="font-semibold w-[400px] text-white mb-[14px] text-[30px] md:text-[50px] lg:text-[60px]">We Prepare For The <span class="text-secondary">Future</span></h1>
-                <p class="text-white text-[14px] w-[360px] mb-[20px] md:mb-[65px] md:w-[460px] md:text-[18px] lg:mb-[65px] lg:w-[530px] lg:text-[20px]">We provide the best architectural design, contruction, and building maintance services for you.</p>
+                <h1 class="font-semibold w-full text-white mb-[14px] text-[20px] md:text-[50px] lg:text-[60px]">We Prepare For The <span class="text-secondary">Future</span></h1>
+                <p class="text-white text-[14px] w-[340px] mb-[20px] md:mb-[65px] md:w-[460px] md:text-[18px] lg:mb-[65px] lg:w-[530px] lg:text-[20px]">We provide the best architectural design, contruction, and building maintance services for you.</p>
                 <div class="flex items-center gap-[24px]">
                     <button class="flex items-center hover:bg-amber-800 justify-center gap-[8px] py-[5px] px-[20px] text-[12px] bg-secondary text-white rounded-[15px] md:text-[14px] md:py-[10px] md:px-[30px] lg:text-[16px] lg:py-[10px] lg:px-[30px]">Our Services<svg class="w-[20px]" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M12 11V8L16 12L12 16V13H8V11H12ZM12 2C17.52 2 22 6.48 22 12C22 17.52 17.52 22 12 22C6.48 22 2 17.52 2 12C2 6.48 6.48 2 12 2ZM12 20C16.42 20 20 16.42 20 12C20 7.58 16.42 4 12 4C7.58 4 4 7.58 4 12C4 16.42 7.58 20 12 20Z"></path></svg></button>
                     <button class="text-black rounded-[15px] hover:bg-secondary py-[5px] px-[20px] bg-white md:text-[14px] md:py-[10px] md:px-[30px] lg:text-[16px] lg:py-[10px] lg:px-[30px]">View Project</button>
@@ -79,15 +79,15 @@
             <div class="mx-[15px] md:mx-[40px] lg:mx-[80px]">
                 <div class="flex pt-[30px] md:pt-[20px] lg:pt-[40px] lg:gap-[30px]">
                     <div class="flex items-center gap-[2px]">
-                        <p class="font-semibold text-secondary text-[25px] md:text-[28px] lg:text-[48px]">25+</p>
-                        <p class="w-[88px] font-medium pt-[12px] text-white text-[12px] md:text-[14px] lg:text-[16px]">Years of Experience</p>
+                        <p class="font-semibold text-secondary text-[18px] md:text-[28px] lg:text-[48px]">25+</p>
+                        <p class="w-[70px] font-medium pt-[12px] text-white text-[12px] md:text-[14px] lg:text-[16px]">Years of Experience</p>
                     </div>
                     <div class="flex items-center gap-[2px]">
-                        <p class="font-semibold text-secondary text-[25px] md:text-[28px] lg:text-[48px]">378+</p>
-                        <p class="w-[80px] font-medium pt-[12px] text-white text-[12px] md:text-[14px] lg:text-[16px]">Project Complete</p>
+                        <p class="font-semibold text-secondary text-[18px] md:text-[28px] lg:text-[48px]">378+</p>
+                        <p class="w-[70px] font-medium pt-[12px] text-white text-[12px] md:text-[14px] lg:text-[16px]">Project Complete</p>
                     </div>
                     <div class="flex items-center gap-[2px]">
-                        <p class="font-semibold text-secondary text-[25px] md:text-[28px] lg:text-[48px]">69+</p>
+                        <p class="font-semibold text-secondary text-[18px] md:text-[28px] lg:text-[48px]">69+</p>
                         <p class="font-medium pt-[12px] text-white md:w-[90px] text-[12px] md:text-[14px] lg:w-[105px] lg:text-[16px]">Winning Global Award</p>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                     <div>
                         <img class="h-[320px] md:h-[420px] lg:h-[420px]" src="./assets/img/photo_construction_people.png" alt="photo contruction people">
                     </div>
-                    <div class="w-[400px] md:w-[828px] lg:w-[828px]">
+                    <div class="w-full md:w-[828px] lg:w-[828px]">
                         <h1 class="text-secondary font-semibold text-[40px] md:text-[50px] lg:text-[50px]">25 years </h1>
                         <h1 class="text-white font-semibold mb-[18px] text-[40px] md:text-[50px] lg:text-[50px]">of experience!</h1>
                         <p class="text-white text-justify mb-[25px] text-[12px] md:text-[16px] lg:text-[16px]">We have a team of experienced professionals who have been in the industry for over 25 years. Our contractors have a wealth of knowledge and skills that they have acquired over the years, making them experts in their field.</p>
@@ -148,7 +148,6 @@
               <h1 class="font-semibold text-[30px] md:text-[40px] lg:text-[50px]">Featured Project</h1>
               <div>
                 <ul class="flex items-center gap-[10px] mt-[20px] font-semibold text-white text-[12px] md:gap-[14px] md:text-[14px] md:mt-0 lg:gap-[14px] lg:text-[16px] lg:mt-0">
-                  <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">All Works</a></li>
                   <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Construction</a></li>
                   <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Architecture</a></li>
                   <li><a class="hover:text-black hover:border-b-2 hover:pb-[10px]" href="">Building</a></li>
@@ -188,11 +187,11 @@
             <div class="absolute top-0 bg-linear-180 from-primary w-full h-full opacity-200 md:px-[40px] lg:px-[80px]">
               <div class="mx-[15px] md:mx-[40px] lg:mx-[80px]">
                 <h1 class="text-white font-semibold text-center mt-[51px] text-[20px] md:text-[40px] lg:text-[50px]">Leading Way In Building & Civil Construction</h1>
-                <div class="grid grid-cols-4 items-center justify-center text-white font-medium mt-[15px] text-[12px] gap-2 md:gap-6 md:text-[16px] md:grid-cols-4 lg:gap-11 lg:text-[20px] lg:grid-cols-4 ">
-                  <p class="flex items-center gap-[5px] md:gap-[10px] lg:gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">Professional Staff</p>
-                  <p class="flex items-center gap-[5px] md:gap-[10px] lg:gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">100% Satisfaction</p>
-                  <p class="flex items-center gap-[5px] md:gap-[10px] lg:gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">Accurate Testing</p>
-                  <p class="flex items-center gap-[5px] md:gap-[10px] lg:gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">Transparent Pricing</p>
+                <div class="grid grid-cols-4 items-center justify-center text-white font-medium mt-[15px] text-[10px] gap-2 md:gap-6 md:text-[16px] md:grid-cols-4 lg:gap-11 lg:text-[20px] lg:grid-cols-4 ">
+                  <p class="flex items-center gap-1 md:gap-[10px] lg:gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">Professional Staff</p>
+                  <p class="flex items-center gap-1 md:gap-[10px] lg:gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">100% Satisfaction</p>
+                  <p class="flex items-center gap-1 md:gap-[10px] lg:gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">Accurate Testing</p>
+                  <p class="flex items-center gap-1 md:gap-[10px] lg:gap-[10px]"><img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">Transparent Pricing</p>
                 </div>
               </div>
               <div class="flex flex-col mt-[50px] md:gap-[40px] md:flex-row lg:gap-0 lg:flex-row lg:justify-between">
@@ -239,7 +238,7 @@
             <div class="flex flex-col justify-between md:flex-row lg:flex-row">
               <h1 class="font-unlock text-[20px] md:text-[33px] lg:text-[33px]">JHONTRAKTOR</h1>
               <div class="flex items-center mt-[10px] md:mt-0 lg:mt-0">
-                <p class="flex items-center text-[16px] md:text-[18px] lg:text-[18px]">Subscribe To Our Newslatter :</p>
+                <p class="flex items-center text-[14px] md:text-[18px] lg:text-[18px]">Subscribe To Our Newslatter :</p>
                 <div class="flex items-center border-b-2">
                   <input class="pl-[19px] focus:outline-none text-[16px]" type="email" placeholder="Enter your email addres">
                   <svg class="w-[24px] cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M1.99974 13.0001L1.9996 11.0002L18.1715 11.0002L14.2218 7.05044L15.636 5.63623L22 12.0002L15.636 18.3642L14.2218 16.9499L18.1716 13.0002L1.99974 13.0001Z"></path></svg>
