memperbaiki card quality control

--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
                     <button class="text-black rounded-[15px] hover:bg-secondary py-[5px] px-[20px] bg-white md:text-[14px] md:py-[10px] md:px-[30px] lg:text-[16px] lg:py-[10px] lg:px-[30px]">View Project</button>
                 </div>
             </div>
-            <div class="bg-secondary w-fit rounded-[15px] absolute top-[300px] right-[15px] flex flex-col py-[15px] px-[10px] gap-2 md:gap-[10px] md:py-[20px] md:px-[20px] md:top-[300px] md:right-3 lg:gap-[15px] lg:py-[53px] lg:px-[50px] lg:top-[520px] lg:right-[80px]">
+            <div class="bg-secondary w-fit rounded-[15px] absolute -bottom-60 right-[15px] flex flex-col py-[15px] px-[10px] gap-2 md:gap-[10px] md:py-[20px] md:px-[20px] md:-bottom-14 md:right-3 lg:gap-[15px] lg:py-[53px] lg:px-[50px] lg:-bottom-24 lg:right-[80px]">
                 <div class="flex items-center gap-[10px]">
                     <img src="./assets/svg/icon-ceklis.svg" alt="svg ceklis">
                     <p class="font-medium text-white text-[12px] md:text-[12px] lg:text-[16px]">Quality Control System, 100% Satisfaction Guarantee</p class="text-[16px] font-medium text-white">
