memperbaiki Subscribe To Our Newsletter lebih responsive

--- a/src/index.html
+++ b/src/index.html
@@ -342,13 +342,21 @@
          <!-- Sosial media -->
          <section class="bg-primary h-full">
           <div class="px-[15px] md:px-[40px] m-auto lg:max-w-7xl text-white py-[43px]">
-            <div class="flex flex-col justify-between md:flex-row lg:flex-row">
+            <div class="flex flex-col justify-between md:flex-row">
               <h1 class="font-unlock text-[20px] md:text-[23px] lg:text-[33px]">JHONTRAKTOR</h1>
-              <div class="flex items-center mt-[10px] md:mt-0">
-                <p class="flex items-center text-[14px] md:text-[18px] lg:text-[18px]">Subscribe To Our Newslatter :</p>
-                <div class="flex items-center border-b-2">
-                  <input class="pl-5 focus:outline-none md:text-[16px]" type="email" placeholder="Enter your email addres">
-                  <svg class="w-6 cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M1.99974 13.0001L1.9996 11.0002L18.1715 11.0002L14.2218 7.05044L15.636 5.63623L22 12.0002L15.636 18.3642L14.2218 16.9499L18.1716 13.0002L1.99974 13.0001Z"></path></svg>
+              <div class="flex flex-col pt-2.5 sm:flex-row sm:items-center gap-2 w-full md:pt-0 md:w-auto">
+                <p class="text-sm md:text-base whitespace-nowrap">Subscribe To Our Newsletter :</p>
+                <div class="flex items-center border-b-2 border-white pb-1 w-full sm:w-64 lg:w-80 group">
+                  <input 
+                    class="bg-transparent w-full focus:outline-none text-sm md:text-base placeholder-white/60 py-1" 
+                    type="email" 
+                    placeholder="Enter your email address"
+                  >
+                  <button class="hover:translate-x-1 transition-transform duration-300">
+                    <svg class="w-6 h-6 cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                      <path d="M1.99974 13.0001L1.9996 11.0002L18.1715 11.0002L14.2218 7.05044L15.636 5.63623L22 12.0002L15.636 18.3642L14.2218 16.9499L18.1716 13.0002L1.99974 13.0001Z"></path>
+                    </svg>
+                  </button>
                 </div>
               </div>
             </div>
