--- a/src/index.html
+++ b/src/index.html
@@ -58,10 +58,10 @@
             
             <div>
                 <ul class="flex flex-col gap-[5px] text-[16px] font-medium py-2">
-                    <li><a class="sidebar-link block w-full p-2.5 rounded transition-colors" href="#home">Home</a></li>
-                    <li><a class="sidebar-link block w-full p-2.5 rounded transition-colors" href="#aboutus">Abaout Us</a></li>
-                    <li><a class="sidebar-link block w-full p-2.5 rounded transition-colors" href="#services">Services</a></li>
-                    <li><a class="sidebar-link block w-full p-2.5 rounded transition-colors" href="#project">project</a></li>
+                    <li><a class="sidebar-link block w-full p-2.5 rounded" href="#home">Home</a></li>
+                    <li><a class="sidebar-link block w-full p-2.5 rounded" href="#aboutus">Abaout Us</a></li>
+                    <li><a class="sidebar-link block w-full p-2.5 rounded" href="#services">Services</a></li>
+                    <li><a class="sidebar-link block w-full p-2.5 rounded" href="#project">project</a></li>
                 </ul>
             </div>
         </div>
